src/test/ui/feature-gates/feature-gate-no_core.stderr
error[E0658]: no_core is experimental (see issue #29639)
  --> $DIR/feature-gate-no_core.rs:3:1
   |
LL | #![no_core]
   | ^^^^^^^^^^^
   |
   = help: add #![feature(no_core)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
