src/test/ui/feature-gates/feature-gate-no_core.rs
#![crate_type = "rlib"]

#![no_core] //~ ERROR no_core is experimental

pub struct S {}
